src/main/webapp/resources/css/style.css
body {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 0.8em;
	width: 960px;
	margin: 0 auto;
}

/* HEADER */
.header {
	font-size: 0.95em;
	font-weight: bold;
	text-shadow: 0 0 3px white;
	background-color: #dcdcdc;
	padding: 10px 0 10px 0;
	border-bottom: 1px solid #aaaaaa;
	margin-bottom: 1%;
}

.logo {
	height: 25px;
	width: 95px;
	margin-bottom: -10px;
}

.searchButton.ui-button {
	border: none;
	background: none;
}

.search-button:HOVER {
	background: white;
	border-radius: 25px;
}

.search-image {
	width: 18px !important;
	height: 18px !important;
	margin-bottom: -3px
}

/* FOOTER */
.footer {
	font-weight: bold;
	color: rgb(204, 204, 204);
	left: 0;
	bottom: 0;
	height: 30px;
	background: #999;
}

/* LINKS */
a {
	text-decoration: none;
	color: black;
	padding: 5px 10px 5px 10px;
}

a:hover {
	text-decoration: underline;
}

/* LOGIN */
.panel-column {
	height: 75px;
	width: 300px
}

.login-panel {
	margin-left: 20%;
	margin-right: 20%;
	height: 270px;
}

/* REGISTER */
.register-panel {
	margin-left: 20%;
	margin-right: 20%;
	height: 350px;
}

/* ADD BOOK */
.selectonemenu-style {
	width: 210px !important;
}

/* BOOK */
.book-panel {
	border: none;
	clear: both;
}

.book-image {
	width: 35%;
	height: 50%;
	float: left;
	margin-left: 5%;
	margin-right: -100px;
}

.book-cover {
	margin-right: -20px;
}

.book-comments {
	width: 61%;
	margin-top: 10px;
	float: right;
	margin-right: 80px;
}

.book-details {
	width: 60%;
	float: left;
	margin-right: 5%;
}

.book-title {
	font-size: 1.6em;
}

.book-author-name.ui-button {
	border: none;
	background: none;
	margin-left: -5px;
}

.book-author-name.ui-button:hover {
	text-decoration: underline !important;
}

.book-ratings-panel.ui-panel .ui-panel-content {
	padding: 0;
	margin: 0;
}

.book-ratings-panel.ui-panel {
	border: none;
	padding: 0;
	margin: 0;
}

.book-ratings-totalRatings {
	font-size: 0.7em;
}

/* AUTHOR */
.author-panel {
	border: none;
	float: left;
	width: 60%;
	margin-right: 3%;
	margin-top: 15px;
}

.author-panel-column {
    width: 200px;
}

.author-image {
	float: left;
	padding: 15px;
	margin-left: 3%;
}

.author-bold {
	font-weight: bold;
}

.author-books {
    float: left;
    margin: 5% 0 4% 4%;
    width: 85%;
}

.author-about {
    height: 115px;
    overflow: hidden;
    font-size: 0.85em;
}

.author-website {
    text-decoration: underline;
    padding: 0;
    color: #666600 !important;
}

.author-about-expanded {
	height: 0%;
}

.author-show-more {
	cursor: pointer;
	color: blue;
}

/* HOME PAGE */
.homepage-recommended {
	font-size: 2em;
	float: left;
}

.homepage-genres {
	margin-right: 5%;
	float: right;
	font-size: 2em;
	padding-right: 23%;
}

.homepage-book-datagrid {
	width: 60%;
	float: left;
}

.homepage-genre-datagrid {
	width: 37%;
	float: right;
}

.homepage-genre.ui-button {
	border: none;
	background: none;
	font-size: 0.8em;
}

.homepage-genre.ui-button:HOVER {
	text-decoration: underline !important;
}

.float-right {
	float: right;
}

.float-left {
	float: left;
}

/* BOOK TEMPLATE */
.book-title.ui-button {
	font-size: 1em;
	border: none;
	background: none;
}

.book-title.ui-button:HOVER,
.book-author.ui-button:HOVER{
	text-decoration: underline !important;
}

.book-author.ui-button {
	font-size: 0.85em;
	border: none;
	background: none;
	margin-left: -5px;
	margin-top: -7px;
}

.book-details-panel {
	font-size: 0.8em;
}

.book-publish-label {
	font-size: 0.8em;
	margin-left: 15px;
}

/* COMMENTS */
.book-review-likes {
	font-size: 0.8em;
    width: 45px;
    float: left;
    text-align: center;
}

.book-review-date {
	font-size: 0.8em;
	float: right;
	color: gray;
	margin-right: 3px;
}

.book-review {
	margin-left: 5px;
}

.book-review-username {
	float: left;
	padding: 0;
	margin-right: 8px;
	color: #666600 !important;
}

.book-review-rating {
	float: left;
	margin-left: 5px;
}

.book-review-like-button {
	margin-left: 3px;
    width: 50px;
}

.book-review-like-button.ui-button-text-only .ui-button-text {
	padding: 3px;
}

.book-review-likes-text {
    margin-top: 4px;
    float: left;
}

